syntax = "proto3";

package HTM.Communication.V1;

import "common.proto";

service HTMMethodsService {
	rpc GetMessageByCommand (GrpcGetMessageByCommandRequest) returns (GrpcGetMessageByCommandResponse);
	rpc GetDeviceConnectionState (GrpcGetDeviceConnectionStateRequest) returns (GrpcGetDeviceConnectionStateResponse);
}

message GrpcGetMessageByCommandRequest {
	string command = 1;
}

message GrpcGetMessageByCommandResponse {
	string message = 1;
}

message GrpcGetDeviceConnectionStateRequest {
	GrpcDeviceType deviceType = 1;
}

message GrpcGetDeviceConnectionStateResponse {
	bool isConnected = 1;
}